--- a/cyc-service/build.gradle
+++ b/cyc-service/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'io.dropwizard:dropwizard-core:1.1.3'
-    compile 'io.dropwizard:dropwizard-auth:1.1.3'
-    compile 'org.projectlombok:lombok:1.16.18'
+    compile "io.dropwizard:dropwizard-core:$dropwizardVersion"
+    compile "io.dropwizard:dropwizard-auth:$dropwizardVersion"
+    compile "org.projectlombok:lombok:$lombokVersion"
 }
